--- a/indexer/indexer.vcxproj
+++ b/indexer/indexer.vcxproj
@@ -10,6 +10,30 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\libs\jsonrpcserver\jsonrpcserver.vcxproj">
+      <Project>{9e1232c0-6d3a-4dbb-a636-72f5c4fb13e8}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\libs\lightspeed\lightspeed.vcxproj">
+      <Project>{9200df2a-2ce6-41fc-b6bf-ef7de0dc95f6}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="docid.h" />
+    <ClInclude Include="increment.h" />
+    <ClInclude Include="IndexerMain.h" />
+    <ClInclude Include="tokenizer.h" />
+    <ClInclude Include="wordid.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="docid.cpp" />
+    <ClCompile Include="IndexerMain.cpp" />
+    <ClCompile Include="tokenizer.cpp" />
+    <ClCompile Include="wordid.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="formaty.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A180A5A2-A637-4FF2-A2EC-EF057C5C89EF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -41,9 +65,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(SolutionDir)libs\jsonrpcserver;$(SolutionDir)libs\lightspeed\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(SolutionDir)libs\jsonrpcserver;$(SolutionDir)libs\lightspeed\src;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -75,17 +101,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="indexer.cpp" />
-    <ClCompile Include="stdafx.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
